--- a/cv.tex
+++ b/cv.tex
@@ -65,9 +65,14 @@
   \vspace{12pt}
   \normalsize
   \begin{tabular}{ p{86pt} | l}
+    November 2015 - & \textbf{Javascript Developer} at Plotly Inc. \\
+    Present & • Maintainer of plotly.js open source graphing library \\
+    & • Implemented a module loading system for trace types \\
+    & • Fix bugs, general code improvements, and feature requests \\
+    & \\
     January 2015 - & \textbf{Freelance Development} \\
     Present & • Create HTML emails for IATA (International Air Transport Authority) (ongoing) \\
-    & • Develop data API for cheaptickets.ca and etickets.ca (in progress) \\
+    & • Develop data API for cheaptickets.ca and etickets.ca \\
     & • Developed PDF Generator for the Bank of Montreal internal use \\
     & \\
     May 2014 - May & \textbf{Backend Developer} at Kreate Solutions \\
@@ -80,10 +85,6 @@
     & • Scheduled staff, train employees, and general management \\
     & • Created marketing materials \\
     & \\
-    Summer 2007 - & \textbf{Sailing Instructor} at the Royal Victoria Yacht Club \\
-    2008 & • Instructed classes of up to 12 students ages 3+ \\
-    & • Repaired boats and equipment using composite materials \\
-    & • Conducted on water rescues during rough weather conditions \\
   \end{tabular}
   \vspace{24pt}
 
@@ -93,21 +94,21 @@
   \vspace{12pt}
   \normalsize
   \begin{tabular}{ p{86pt} | l  }
-    Languages & HTML, CSS/SASS, Javascript/Node (very comfortable) \\
-    & PHP (comfortable) \\
-    & Haskell, Elm, Python (still learning) \\ 
+    Languages & HTML, CSS/SASS, Javascript/Node (advanced) \\
+    & PHP (intermediate) \\
+    & Haskell, Elm, Python, LaTeX (basic) \\
     & Rust, C++, Java (enough to follow along in a conversation) \\
     & \\
-    Frameworks and & Express, Hapi, Mithril, jQuery (very comfortable) \\
-    Libraries & Ember, Angular, React, d3 (still learning) \\
+    Frameworks and & Express, Mithril, jQuery, plotly.js (advanced) \\
+    Libraries & React/Redux, d3 (intermediate) \\
     & \\
-    Databases & Postgres, MySQL, MongoDB, LevelDB \\
+    Databases & Postgres, MySQL, LevelDB, Redis \\
     & \\
-    Tools etc. & *nix, Git, Webpack, Gulp, Docker, AWS
+    Tools etc. & *nix, Git, Webpack, Docker, AWS
   \end{tabular}
   \vspace{24pt}
 
-  
+
   \large
   \textbf{References}
   \normalsize
