--- a/cv.tex
+++ b/cv.tex
@@ -67,13 +67,13 @@
   \begin{tabular}{ p{86pt} | l}
     November 2015 - & \textbf{Javascript Developer} at Plotly Inc. \\
     Present & • Maintainer of plotly.js open source graphing library \\
-    & • Implemented a module loading system for trace types \\
+    & • Implemented module loading system, scrolling legend, and domain slide selector \\
     & • Fix bugs, general code improvements, and feature requests \\
     & \\
     January 2015 - & \textbf{Freelance Development} \\
-    Present & • Create HTML emails for IATA (International Air Transport Authority) (ongoing) \\
-    & • Develop data API for cheaptickets.ca and etickets.ca \\
-    & • Developed PDF Generator for the Bank of Montreal internal use \\
+    Present & • Data API for cheaptickets.ca and etickets.ca \\
+    & • PDF chart generator for the Bank of Montreal internal use \\
+    & • HTML emails for IATA (International Air Transport Authority) \\
     & \\
     May 2014 - May & \textbf{Backend Developer} at Kreate Solutions \\
     2015 & • Created RESTful api for consumption by mobile clients \\
@@ -96,7 +96,7 @@
   \begin{tabular}{ p{86pt} | l  }
     Languages & HTML, CSS/SASS, Javascript/Node (advanced) \\
     & PHP (intermediate) \\
-    & Haskell, Elm, Python, LaTeX (basic) \\
+    & Haskell, Elm, Python, LaTeX, Lua (basic) \\
     & Rust, C++, Java (enough to follow along in a conversation) \\
     & \\
     Frameworks and & Express, Mithril, jQuery, plotly.js (advanced) \\
