--- a/cv.tex
+++ b/cv.tex
@@ -9,17 +9,16 @@
 
 \geometry{
  a4paper,
- total={210mm,297mm},
- left=20mm,
- right=20mm,
- top=20mm,
- bottom=20mm,
+ left=18mm,
+ right=18mm,
+ top=18mm,
+ bottom=18mm,
 }
 \pagenumbering{gobble}
 \frenchspacing
 \title{Curriculum Vitae}
 \author{Miklós Tusz}
-\date{2015-09-22}
+\date{2017-01-15}
 
 \begin{document}
 \begin{flushleft}
@@ -65,20 +64,24 @@
   \vspace{12pt}
   \normalsize
   \begin{tabular}{ p{86pt} | l}
-    November 2015 - & \textbf{Javascript Developer} at Plotly Inc. \\
-    Present & • Maintainer of plotly.js open source graphing library \\
-    & • Implemented module loading system, scrolling legend, and domain slide selector \\
-    & • Fix bugs, general code improvements, and feature requests \\
-    & \\
-    January 2015 - & \textbf{Freelance Development} \\
-    Present & • Data API for cheaptickets.ca and etickets.ca \\
+    Ongoing - & \textbf{Freelance Development} \\
+    & • Private website for expected values of sports bets across various markets \\
+    & • Data API for cheaptickets.ca and etickets.ca \\
     & • PDF chart generator for the Bank of Montreal internal use \\
     & • HTML emails for IATA (International Air Transport Authority) \\
     & \\
+    November 2015 - & \textbf{Developer} at Plotly Inc. \\
+    December 2016 & • Maintainer of plotly.js open source graphing library \\
+    & • Implemented module loading system, scrolling SVG legends, plot domain \\
+    & \hspace{5pt} slide selections, and plot images \\
+    & • Large refactor of webapp to use redux everywhere (and remove old flux usage) \\
+    & • Added Jupyter notebook and Spectacle presentation support to webapp \\
+    & • General bugfixes and maintenance of tooling \\
+    & \\
     May 2014 - May & \textbf{Backend Developer} at Kreate Solutions \\
-    2015 & • Created RESTful api for consumption by mobile clients \\
+    2015 & • Created REST api for consumption by mobile clients \\
+    & • Integrated social media account support \\
     & • Managed deployments using Docker and AWS \\
-    & • Migrated user data from old to new schemas and servers \\
     & \\
     Summer 2009 - & \textbf{Sailing Program Coordinator} at the Royal Victoria Yacht Club \\
     2010 & • Automated email newsletters for registration and course schedules \\
@@ -95,16 +98,16 @@
   \normalsize
   \begin{tabular}{ p{86pt} | l  }
     Languages & HTML, CSS/SASS, Javascript/Node (advanced) \\
-    & PHP (intermediate) \\
-    & Haskell, Elm, Python, LaTeX, Lua (basic) \\
+    & PHP, Python (intermediate) \\
+    & Haskell, Elm, Go, LaTeX, Lua (basic) \\
     & Rust, C++, Java (enough to follow along in a conversation) \\
     & \\
-    Frameworks and & Express, Mithril, jQuery, plotly.js (advanced) \\
-    Libraries & React/Redux, d3 (intermediate) \\
+    Frameworks and & Express, React/Redux, plotly.js, Flask (advanced) \\
+    Libraries & d3, Django (intermediate) \\
     & \\
-    Databases & Postgres, MySQL, LevelDB, Redis \\
+    Databases & Postgres, MySQL, Redis \\
     & \\
-    Tools etc. & *nix, Git, Webpack, Docker, AWS
+    Tools etc. & *nix, Git, Webpack, Docker, AWS, Vagrant 
   \end{tabular}
   \vspace{24pt}
 
