--- a/cv.tex
+++ b/cv.tex
@@ -64,9 +64,9 @@
   \vspace{12pt}
   \normalsize
   \begin{tabular}{ p{86pt} | l}
-    Ongoing - & \textbf{Freelance Development} \\
+    Ongoing & \textbf{Freelance Development} \\
     & • Private website for expected values of sports bets across various markets \\
-    & • Data API for cheaptickets.ca and etickets.ca \\
+    & • Data API for etickets.ca \\
     & • PDF chart generator for the Bank of Montreal internal use \\
     & • HTML emails for IATA (International Air Transport Authority) \\
     & \\
@@ -76,10 +76,10 @@
     & \hspace{5pt} slide selections, and plot images \\
     & • Large refactor of webapp to use redux everywhere (and remove old flux usage) \\
     & • Added Jupyter notebook and Spectacle presentation support to webapp \\
-    & • General bugfixes and maintenance of tooling \\
+    & • General bugfixes and maintenance of stack tooling \\
     & \\
-    May 2014 - May & \textbf{Backend Developer} at Kreate Solutions \\
-    2015 & • Created REST api for consumption by mobile clients \\
+    May 2014 - & \textbf{Backend Developer} at Kreate Solutions \\
+    May 2015 & • Created REST api for consumption by mobile clients \\
     & • Integrated social media account support \\
     & • Managed deployments using Docker and AWS \\
     & \\
@@ -98,7 +98,7 @@
   \normalsize
   \begin{tabular}{ p{86pt} | l  }
     Languages & HTML, CSS/SASS, Javascript/Node (advanced) \\
-    & PHP, Python (intermediate) \\
+    & PHP, Python (intermediate+) \\
     & Haskell, Elm, Go, LaTeX, Lua (basic) \\
     & Rust, C++, Java (enough to follow along in a conversation) \\
     & \\
