--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-\documentclass[notitlepage,oneside,draft]{article}
+\documentclass[10pt,notitlepage,oneside,draft]{article}
 
 \usepackage[utf8]{inputenc}
 \usepackage[document]{ragged2e}
@@ -18,7 +18,7 @@
 \frenchspacing
 \title{Curriculum Vitae}
 \author{Miklós Tusz}
-\date{2017-01-15}
+\date{2017-04-30}
 
 \begin{document}
 \begin{flushleft}
@@ -51,12 +51,12 @@
   \normalsize
   \begin{tabular}{ p{86pt} | l  }
     2010 - 2015 & \textbf{Concordia University} \\
-    & Major Economics \\
-    & Minor Computer Science \\
+    & Major in Economics \\
+    & Minor in Computer Science \\
     & \\
     2005 - 2009 & \textbf{St. Michaels University School} \\
   \end{tabular}
-  \vspace{24pt}
+  \vspace{20pt}
 
 
   \large
@@ -64,11 +64,17 @@
   \vspace{12pt}
   \normalsize
   \begin{tabular}{ p{86pt} | l}
+    May 2017 - & \textbf{Fullstack Developer} at Aon3D \\
+    Present & • Establish ERP software stack and \\
+    & • Develop django application for inventory and production management \\
+    & • Integrate external SAAS platforms with Odoo ERP \\
+    & • Create create marketing website and establish data collection for analytics \\
+    & \\ 
     Ongoing & \textbf{Freelance Development} \\
-    & • Private website for expected values of sports bets across various markets \\
-    & • Data API for etickets.ca \\
+    & • Private site for calculating expected values and arbitrage opportunities \\
+    & \hspace{5pt} of bets across various markets \\
     & • PDF chart generator for the Bank of Montreal internal use \\
-    & • HTML emails for IATA (International Air Transport Authority) \\
+    & • Static sites for small businesses \\
     & \\
     November 2015 - & \textbf{Developer} at Plotly Inc. \\
     December 2016 & • Maintainer of plotly.js open source graphing library \\
@@ -80,16 +86,11 @@
     & \\
     May 2014 - & \textbf{Backend Developer} at Kreate Solutions \\
     May 2015 & • Created REST api for consumption by mobile clients \\
-    & • Integrated social media account support \\
+    & • Aggregated content from multiple social platforms for feeds \\
     & • Managed deployments using Docker and AWS \\
     & \\
-    Summer 2009 - & \textbf{Sailing Program Coordinator} at the Royal Victoria Yacht Club \\
-    2010 & • Automated email newsletters for registration and course schedules \\
-    & • Scheduled staff, train employees, and general management \\
-    & • Created marketing materials \\
-    & \\
   \end{tabular}
-  \vspace{24pt}
+  \vspace{20pt}
 
 
   \large
@@ -97,25 +98,28 @@
   \vspace{12pt}
   \normalsize
   \begin{tabular}{ p{86pt} | l  }
-    Languages & HTML, CSS/SASS, Javascript/Node (advanced) \\
-    & PHP, Python (intermediate+) \\
+      Languages & HTML, CSS/SASS, Javascript/Node, Python (advanced) \\
+    & PHP, Shell scripting (intermediate) \\
     & Haskell, Elm, Go, LaTeX, Lua (basic) \\
     & Rust, C++, Java (enough to follow along in a conversation) \\
     & \\
-    Frameworks and & Express, React/Redux, plotly.js, Flask (advanced) \\
-    Libraries & d3, Django (intermediate) \\
+    Frameworks and & Express, React/Redux, plotly.js, Flask, Django (advanced) \\
+    Libraries & d3, Vue (intermediate) \\
     & \\
     Databases & Postgres, MySQL, Redis \\
     & \\
-    Tools etc. & *nix, Git, Webpack, Docker, AWS, Vagrant 
+    Tools etc. & *nix, Vim\footnotemark[1], Git, Webpack, Docker, AWS, Vagrant 
   \end{tabular}
-  \vspace{24pt}
+  \vspace{20pt}
 
 
   \large
   \textbf{References}
   \normalsize
   available upon request
+
+
+  \footnotetext[1]{Because I'm not a heathen.}
 
 \end{flushleft}
 \end{document}
