--- a/cv.tex
+++ b/cv.tex
@@ -53,8 +53,6 @@
     2010 - 2015 & \textbf{Concordia University} \\
     & Major in Economics \\
     & Minor in Computer Science \\
-    & \\
-    2005 - 2009 & \textbf{St. Michaels University School} \\
   \end{tabular}
   \vspace{20pt}
 
@@ -64,11 +62,11 @@
   \vspace{12pt}
   \normalsize
   \begin{tabular}{ p{86pt} | l}
-    May 2017 - & \textbf{Fullstack Developer} at Aon3D \\
-    Present & • Establish ERP software stack and \\
-    & • Develop django application for inventory and production management \\
+    May 2017 - & \textbf{Lead Developer} at Aon3D \\
+    Present & • Develop host control software for industrial 3D printers \\
+    & • Maintain software deployments and update strategy across customer printers \\ 
     & • Integrate external SAAS platforms with Odoo ERP \\
-    & • Create create marketing website and establish data collection for analytics \\
+    & • Create marketing websites and internal web services \\
     & \\ 
     Ongoing & \textbf{Freelance Development} \\
     & • Private site for calculating expected values and arbitrage opportunities \\
@@ -94,7 +92,7 @@
 
 
   \large
-  \textbf{Skills} \\
+  \textbf{Skills and Keywords} \\
   \vspace{12pt}
   \normalsize
   \begin{tabular}{ p{86pt} | l  }
@@ -108,7 +106,7 @@
     & \\
     Databases & Postgres, MySQL, Redis \\
     & \\
-    Tools etc. & *nix, Vim\footnotemark[1], Git, Webpack, Docker, AWS, Vagrant 
+    Tools etc. & *nix, Vim\footnotemark[1], Git, Webpack, Docker, AWS, Azure, Vagrant 
   \end{tabular}
   \vspace{20pt}
 
@@ -119,7 +117,7 @@
   available upon request
 
 
-  \footnotetext[1]{Because I'm not a heathen.}
+  \footnotetext[1]{I'll try not to start a war.}
 
 \end{flushleft}
 \end{document}
