Add build and cv update

--- a/cv.tex
+++ b/cv.tex
@@ -65,7 +65,7 @@
     May 2017 - & \textbf{Lead Developer} at Aon3D \\
     Present & • Develop host control software for industrial 3D printers \\
     & • Maintain software deployments and update strategy across customer printers \\ 
-    & • Integrate external SAAS platforms with Odoo ERP \\
+    & • Customize firmware for new control boards and hardware \\
     & • Create marketing websites and internal web services \\
     & \\ 
     Ongoing & \textbf{Freelance Development} \\
