--- a/cv.tex
+++ b/cv.tex
@@ -1,29 +1,28 @@
 \documentclass[10pt,notitlepage,oneside,draft]{article}
-
 \usepackage[utf8]{inputenc}
 \usepackage[document]{ragged2e}
 \usepackage{geometry}
 \usepackage{multicol}
 \usepackage{color}
 \usepackage{array}
+\usepackage{setspace}
+\usepackage{hyperref}
 
-\geometry{
- a4paper,
- left=18mm,
- right=18mm,
- top=18mm,
- bottom=18mm,
-}
+\definecolor{prussianblue}{rgb}{0.0, 0.19, 0.33}
+\hypersetup{draft=false, colorlinks=true, linkcolor=prussianblue, urlcolor=prussianblue}
+\urlstyle{same}
+
+\geometry{a4paper, left=12mm, right=12mm, top=14mm, bottom=14mm}
 \pagenumbering{gobble}
 \frenchspacing
 \title{Curriculum Vitae}
 \author{Miklós Tusz}
-\date{2017-04-30}
+\date{2020‐07‐13}
 
 \begin{document}
 \begin{flushleft}
 
-  \Huge
+  \huge
   \textbf{Miklós Tusz}
 
   \small
@@ -31,14 +30,13 @@
   \begin{multicols}{2}
 
     \begin{flushleft}
-      \textbf{City:} Montreal, QC \\
-      \textbf{Phone:} 514-458-6468 \\
-      \textbf{Email:} mdtusz@gmail.com \\
+      \textbf{Phone:} 514‒458‒6468 \\
+        \textbf{Email:} \href{mailto:mdtusz@gmail.com}{mdtusz@gmail.com} \\
     \end{flushleft}
 
     \begin{flushright}
-      \textbf{Github:} mdtusz \\
-      \textbf{Blog:} miklostusz.com \\
+        \textbf{Github:} \href{https://github.com/mdtusz}{mdtusz} \\
+        \textbf{Web:} \href{https://www.miklostusz.com}{miklostusz.com} \\
     \end{flushright}
 
   \end{multicols}
@@ -46,78 +44,114 @@
   \rule{\textwidth}{1pt}\\[6pt]
 
   \large
+  \textbf{Work Experience} \\
+  \vspace{8pt}
+
+  \normalsize
+  \begin{tabular}{p{78pt} | l}
+      \scriptsize May 2017 ‐ Jul 2020 & \textbf{\href{https://www.aon3d.com}{AON3D}}, Lead Software Developer (\footnotesize Flask, Django, React/Redux, Docker, Azure, Dokku, Balena)\\
+    \\
+    & • Designed and implemented the host control system that powers all AON3D industrial \\
+    & \hspace{5pt} 3D printers. This manages OTA updates, displays the UI, and provides file management. \\
+    & • Developed asynchronous protocol for communication between real-time firmware (AVR MCU) \\
+    & \hspace{5pt} and backend control system (ARM Linux) over serial data lines. \\
+    & • Assisted in development of system update mechanism that works entirely offline for air-gapped \\
+    & \hspace{5pt} machines in high-security locations. \\
+    & • Created a dashboard for monitoring machine status, uptime, network information, version, and \\
+      & \hspace{5pt} machine management capabilities for non-technical staff. \\
+    & • Developed hardware-specific automatic-bed leveling feature in machine firmware. \\
+    & • Implemented a SAML service in the internal dashboard. This supported customer identity \\
+    & \hspace{5pt} providers for authorization, authentication and single-sign-on. \\
+    & • Provided technical support and development directly to large enterprises, research laboratories, \\
+    & \hspace{5pt} small businesses, and government agencies. \\
+    & • Coordinated with mechanical and sales teams for implementing hardware-dependent features \\
+    & \hspace{5pt} and planning customer-requested development projects. \\
+  \end{tabular}
+
+  \vspace{12pt}
+
+  \begin{tabular}{p{78pt} | l}
+      \scriptsize Nov 2015 ‐ Jan 2017 & \textbf{\href{https://plot.ly}{Plotly}}, Fullstack Developer  (\footnotesize D3.js, WebGL, React/Redux, Django, Vagrant, AWS)\\
+    \\
+    & • Core maintainer of \href{https://github.com/plotly/plotly.js}{Plotly.js}, a widely used open source graphing and visualization library. \\
+    & • Implemented module loading system, leveraging Webpack ``tree-shaking'' to allow for smaller, \\
+    & \hspace{5pt} bundled builds containing only desired plot features as specified by the user. \\
+    & • Introduced features including scrolling SVG legends, plot-domain slider-selector, and \\
+    & \hspace{5pt} embedded plot images. \\
+    & • Worked in a small team to migrate main React application data store from Flux to Redux. \\
+    & • Added Jupyter notebook and Spectacle presentation support to Plotly Studio platform. \\
+  \end{tabular}
+
+  \vspace{12pt}
+
+  \begin{tabular}{p{78pt} | l}
+      \scriptsize May 2014 ‐ May 2015 & \textbf{Kreate Solutions}, Backend Developer (\footnotesize Express, React/Flux, Docker, AWS)\\
+    \\
+    & • Created REST API's to serve various data feeds and provide user authentication. \\
+    & • Aggregated content from multiple social platforms for data feed service. \\
+    & • Managed web application and API server deployments using Docker and ElasticBeanstalk. \\
+  \end{tabular}
+
+  \vspace{12pt}
+
+  \begin{tabular}{p{78pt} | l}
+    \scriptsize 2013 ‐ Present & \textbf{Contract Development} \\
+    \\
+    & • Developed a private website for calculating expected values and arbitrage opportunities \\
+    & \hspace{5pt} of bets across various sports-betting markets. \\
+    & • Implemented websites from static designs for brand and design agency \href{http://www.thesmallmonsters.com}{``The Small Monsters''}. \\
+    & • Created a PDF chart generation program using D3 that was used by the Bank \\
+    & \hspace{5pt} of Montreal for monthly accounting reports. \\
+  \end{tabular}
+
+  \vspace{12pt}
+
+  \large
   \textbf{Education} \\
-  \vspace{12pt}
-  \normalsize
-  \begin{tabular}{ p{86pt} | l  }
-    2010 - 2015 & \textbf{Concordia University} \\
-    & Major in Economics \\
-    & Minor in Computer Science \\
-  \end{tabular}
-  \vspace{20pt}
+  \vspace{8pt}
 
+  \normalsize
+  \begin{tabular}{p{78pt} | l  }
+    \scriptsize 2010 ‐ 2015 & \textbf{B.A. Economics, Concordia University}, Minor in Computer Science \\
+  \end{tabular}
+
+  \vspace{12pt}
 
   \large
-  \textbf{Experience} \\
-  \vspace{12pt}
+  \textbf{Skills and Interests} \\
+  \vspace{8pt}
+
   \normalsize
-  \begin{tabular}{ p{86pt} | l}
-    May 2017 - & \textbf{Lead Developer} at Aon3D \\
-    Present & • Develop host control software for industrial 3D printers \\
-    & • Maintain software deployments and update strategy across customer printers \\ 
-    & • Customize firmware for new control boards and hardware \\
-    & • Create marketing websites and internal web services \\
-    & \\ 
-    Ongoing & \textbf{Freelance Development} \\
-    & • Private site for calculating expected values and arbitrage opportunities \\
-    & \hspace{5pt} of bets across various markets \\
-    & • PDF chart generator for the Bank of Montreal internal use \\
-    & • Static sites for small businesses \\
-    & \\
-    November 2015 - & \textbf{Developer} at Plotly Inc. \\
-    December 2016 & • Maintainer of plotly.js open source graphing library \\
-    & • Implemented module loading system, scrolling SVG legends, plot domain \\
-    & \hspace{5pt} slide selections, and plot images \\
-    & • Large refactor of webapp to use redux everywhere (and remove old flux usage) \\
-    & • Added Jupyter notebook and Spectacle presentation support to webapp \\
-    & • General bugfixes and maintenance of stack tooling \\
-    & \\
-    May 2014 - & \textbf{Backend Developer} at Kreate Solutions \\
-    May 2015 & • Created REST api for consumption by mobile clients \\
-    & • Aggregated content from multiple social platforms for feeds \\
-    & • Managed deployments using Docker and AWS \\
-    & \\
+  \begin{tabular}{p{78pt} | l}
+    \scriptsize Languages & Python, Typescript, Rust, C, Bash, SQL, Javascript/Node, HTML, CSS/SASS \\
   \end{tabular}
-  \vspace{20pt}
 
+  \vspace{6pt}
 
-  \large
-  \textbf{Skills and Keywords} \\
-  \vspace{12pt}
-  \normalsize
-  \begin{tabular}{ p{86pt} | l  }
-      Languages & HTML, CSS/SASS, Javascript/Node, Python (advanced) \\
-    & PHP, Shell scripting (intermediate) \\
-    & Haskell, Elm, Go, LaTeX, Lua (basic) \\
-    & Rust, C++, Java (enough to follow along in a conversation) \\
-    & \\
-    Frameworks and & Express, React/Redux, plotly.js, Flask, Django (advanced) \\
-    Libraries & d3, Vue (intermediate) \\
-    & \\
-    Databases & Postgres, MySQL, Redis \\
-    & \\
-    Tools etc. & *nix, Vim\footnotemark[1], Git, Webpack, Docker, AWS, Azure, Vagrant 
+  \begin{tabular}{p{78pt} | l}
+    \scriptsize Frameworks & Django, Flask, React/Redux, Ramda, Plotly.js, Express, Yew, P5.js, WebGL \\
   \end{tabular}
-  \vspace{20pt}
 
+  \vspace{6pt}
 
-  \large
-  \textbf{References}
-  \normalsize
-  available upon request
+  \begin{tabular}{p{78pt} | l}
+    \scriptsize Databases & Postgres, SQLite, MySQL, Redis \\
+  \end{tabular}
 
+  \vspace{6pt}
 
-  \footnotetext[1]{I'll try not to start a war.}
+  \begin{tabular}{p{78pt} | l}
+    \scriptsize Tools & GNU/Linux, Git, GPG, Make, Webpack, Docker, Dokku, AWS, Azure, Vagrant, Balena
+  \end{tabular}
+
+  \vspace{6pt}
+
+  \begin{tabular}{p{78pt} | l}
+    \scriptsize Interests & Computer graphics, additive manufacturing, rock climbing, backcountry skiing, sailing, and \\
+    & discovering how and why things work.
+  \end{tabular}
+
+  \vspace{16pt}
 
 \end{flushleft}
 \end{document}
